--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -4,9 +4,10 @@ document,body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
 }
 .airvis-container {
-	height: 100%;
+	min-height: 100%;
 	margin: 0;
 	padding: 0;
 }
@@ -64,7 +65,7 @@ document,body {
 	position: absolute;
 }
 .airvis-window-header {
-	background-color: rgba(8,55,72,.95);
+	background-color: rgba(0,47,64,.93);
 	padding: 3px 3px;
 }
 .airvis-window-title {
@@ -101,7 +102,7 @@ document,body {
 	text-decoration: underline;
 }
 .airvis-window-content {
-	background-color: rgba(8,55,72,.8);
+	background-color: rgba(0,47,64,.75);
 	position: relative;
 	overflow: auto;
 }
@@ -160,21 +161,27 @@ document,body {
 	overflow: hidden;
 	position: static;
 	width: 100%;
+	font-size: 12px;
+	color: #ffffff;
+
 }
+.airvis-table-with-fixed-header table thead tr th > div { background-color: rgba(0,47,64,.50);}
 .airvis-table-with-fixed-header table th {
 	padding: 0;
 	border: 0;
 	font-size: 10px;
 	text-align: left;
 }
-.airvis-table-with-fixed-header th > div {
-	border-left: 1px solid #f5f5f5;
+.airvis-table-with-fixed-header th div.th_wrap {
 	line-height: 12px;
-	padding: 0 4px;
 	position: absolute;
 	text-align: left;
-	top: -24px;
+	top: -30px;
+	height: 30px;
+	width: 100%;
+	
 }
+.airvis-table-with-fixed-header th div.th_wrap div { position: absolute; bottom: 0; left: 0; right: 0; padding: 0 4px;}
 .airvis-table-with-fixed-header tr.airvis-hidden-header th > div {
 	height: 0;
 	overflow-y: hidden;
@@ -184,11 +191,14 @@ document,body {
 
 
 /* redefine font sizes in airvis tables */
+.airvis-window table tbody tr:nth-child(2n+2) { background-color: rgba(0,47,64,.35);}
 .airvis-window table tbody td {
-	font-size: 10px;
+	/*font-size: 10px;*/
 	line-height: 20px;
 	padding: 2px 4px;
 }
+.airvis-window table tbody td + td { border-left: 1px solid rgba(0,47,64,.15)}
+
 .airvis-window th.airvis-checkbox, .airvis-window td.airvis-checkbox {
 	padding: 0;
 	text-align: center;
@@ -427,8 +437,8 @@ document,body {
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 35px;
-	background-color: #083748;
+	height: 40px;
+	background-color: rgba(0, 47, 64, 0.93);
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .airvis-topbar-container {
@@ -436,12 +446,12 @@ document,body {
 	width: 800px;
 }
 .airvis-topbar-logo {
-	background: transparent url("logo_0.png") 0 0 no-repeat;
+	background: transparent url("../img/logo.png") 0 0 no-repeat;
 	display: block;
 	float: left;
-	height: 31px;
-	margin: 2px;
-	width: 223px;
+	height: 24px;
+	margin: 8px 0 0 0;
+	width: 216px;
 }
 .airvis-topbar-items {
 	display: block;
@@ -457,21 +467,29 @@ document,body {
 }
 .airvis-topbar-items a {
 	display: block;
-	margin-top: 5px;
+	margin-top: 8px;
 	margin-left: 10px;
-	padding: 2px 5px;
+	padding: 0 11px;
+	height: 24px;
 	background-color: #c3ced0;
+	color: #002a3a;
+	text-decoration: none;
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 24px;
+
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
-	color: #002a38;
-	text-decoration: none;
-	font-size: 10pt;
-	font-weight: bold;
+
 }
 .airvis-topbar-items a.airvis-checked {
 	background-color: transparent;
 	color: #ffffff;
+}
+.airvis-topbar-items a:hover {
+	background-color: #ffffff;
+	color: #002a3a;	
 }
 
 /* Title */
