--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -174,6 +174,7 @@ document,body {
 	position: absolute;
 	text-align: left;
 	top: -24px;
+	height: 24px;
 }
 .airvis-table-with-fixed-header tr.airvis-hidden-header th > div {
 	height: 0;
@@ -188,6 +189,9 @@ document,body {
 	font-size: 10px;
 	line-height: 20px;
 	padding: 2px 4px;
+}
+.airvis-window td,.airvis-window th {
+	color: #ffffff;
 }
 .airvis-window th.airvis-checkbox, .airvis-window td.airvis-checkbox {
 	padding: 0;
