--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -66,17 +66,17 @@ document,body {
 }
 .airvis-window-header {
 	background-color: rgba(0,47,64,.93);
-	padding: 3px 3px;
+	padding: 0 11px;
+	height: 40px;
 }
 .airvis-window-title {
 	color: #ffffff;
 	display: block;
 	float: left;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: bold;
-	line-height: 20px;
-	padding: 0 3px;
-	text-transform: uppercase;
+	line-height: 40px;
+	padding: 0 11px;
 	text-rendering: optimizelegibility;
 }
 .airvis-window-close {
@@ -86,6 +86,7 @@ document,body {
 	width: 20px;
 	height: 20px;
 	background: url("icon-close.png") 0 0 no-repeat;
+	margin-top: 10px;
 }
 .airvis-window-close-absolute {
 	position: absolute;
@@ -149,7 +150,7 @@ document,body {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	top: 30px;
+	top: 42px;
 }
 .airvis-table-with-fixed-header-inner {
 	height: 100%;
@@ -165,23 +166,24 @@ document,body {
 	color: #ffffff;
 
 }
-.airvis-table-with-fixed-header table thead tr th > div { background-color: rgba(0,47,64,.50);}
+.arvis-table-head-surrogate { width: 100%; height: 42px; background-color: rgba(0,47,64,.50);}
 .airvis-table-with-fixed-header table th {
 	padding: 0;
 	border: 0;
-	font-size: 10px;
+	font-size: 12px;
+	line-height: 15px;
 	text-align: left;
+	font-weight: normal;
 }
 .airvis-table-with-fixed-header th div.th_wrap {
-	line-height: 12px;
 	position: absolute;
-	text-align: left;
-	top: -30px;
-	height: 30px;
-	width: 100%;
+	text-align: center;
+	top: -42px;
+	height: 42px;
+	
 	
 }
-.airvis-table-with-fixed-header th div.th_wrap div { position: absolute; bottom: 0; left: 0; right: 0; padding: 0 4px;}
+.airvis-table-with-fixed-header th div.th_wrap div { position: absolute; bottom: 5px; left: 0; right: 0; padding: 0 10px;}
 .airvis-table-with-fixed-header tr.airvis-hidden-header th > div {
 	height: 0;
 	overflow-y: hidden;
@@ -195,17 +197,17 @@ document,body {
 .airvis-window table tbody td {
 	/*font-size: 10px;*/
 	line-height: 20px;
-	padding: 2px 4px;
+	padding: 2px 10px;
 }
 .airvis-window table tbody td + td { border-left: 1px solid rgba(0,47,64,.15)}
 
 .airvis-window th.airvis-checkbox, .airvis-window td.airvis-checkbox {
 	padding: 0;
 	text-align: center;
-	width: 22px;
+	width: 32px;
 }
 .airvis-window th.airvis-checkbox .checkbox, .airvis-window td.airvis-checkbox .checkbox {
-	margin-bottom: -5px;
+	/*margin-bottom: -5px;*/
 	margin-top: 5px;
 }
 
