--- a/src/css/checkbox.css
+++ b/src/css/checkbox.css
@@ -1,13 +1,13 @@
 span.checkbox {
     display: inline-block;
-    width: 14px;
-    height: 14px;
-    background: url("../img/checkbox.png") 0 14px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
+    width: 12px;
+    height: 12px;
+    background: url("../img/checkbox.png") no-repeat 0 -100px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
 }
 
 span.checkbox.checked {
-    background-position: 14px 0;
+    background-position: 0 0;
 }
