--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -46,8 +46,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 /* table with fixed header in ufosTable widget */
 .airvis-table-with-fixed-header { position: absolute; bottom: 0; left: 0; right: 0; top: 42px;}
 .airvis-table-with-fixed-header-inner { height: 100%; overflow-x: hidden; overflow-y: auto;}
-.airvis-table-with-fixed-header table { margin: 0; overflow: hidden; position: static; width: 100%; font-size: 12px; color: #ffffff;
-}
+.airvis-table-with-fixed-header table { margin: 0; overflow: hidden; position: static; width: 100%; font-size: 12px; color: #ffffff;}
 .arvis-table-head-surrogate { width: 100%; height: 42px; background-color: rgba(0,47,64,.50);}
 .airvis-table-with-fixed-header table th { padding: 0; border: 0; font-size: 12px; line-height: 15px; text-align: left; font-weight: normal;}
 .airvis-table-with-fixed-header th div.th_wrap { position: absolute; text-align: center; top: -42px; height: 42px;  }
@@ -68,13 +67,37 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-player-controls { padding: 5px; padding-bottom: 0;}
 .airvis-player-controls button { margin: 2px;}
 .airvis-current-time { color: #00aeef; font-size: 12.8px; padding: 0 10px; padding-bottom: 5px;}
-.airvis-slider { background-color: #777777; border: 1px solid #555555; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; height: 10px; margin: 4px; position: relative;}
+.airvis-slider { background-color: #777777; border: 1px solid #555555; height: 10px; margin: 4px; position: relative;
+
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px;
+
+}
 .airvis-slider-container { padding: 5px; padding-top: 0; overflow: hidden;}
-.airvis-slider-handle { background-color: #a4a4a4; border: 1px solid #444444; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; display: block; height: 15px; margin-left: -4px; margin-top: -4px; width: 15px; position: absolute; overflow: hidden;}
-.airvis-slider-range { background-color: #ececec; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; height: 10px; left: 0; position: absolute;}
+.airvis-slider-handle { background-color: #a4a4a4; border: 1px solid #444444; display: block; height: 15px; margin-left: -4px; margin-top: -4px; width: 15px; position: absolute; overflow: hidden;
+
+  -webkit-border-radius: 10px; 
+  -moz-border-radius: 10px; 
+  border-radius: 10px;
+
+}
+.airvis-slider-range { background-color: #ececec; height: 10px; left: 0; position: absolute;
+
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px;
+
+}
 .airvis-player-controls-titles { background-color: rgba(0,0,0,.4);}
 .airvis-player-controls-titles strong { color: #606060; padding: 2px 5px;}
-.airvis-player-timeWindow { -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; float: left; margin: 10px;}
+.airvis-player-timeWindow { float: left; margin: 10px; width: 150px; text-align: center;
+
+  -webkit-border-radius: 2px; 
+  -moz-border-radius: 2px; 
+  border-radius: 2px;
+
+}
 .airvis-player-timeWindow.airvis-active { background-color: #ced828;}
 .airvis-player-timeWindow.airvis-inactive { background-color: #fbd72c;}
 .airvis-player-timeWindow.airvis-local { background-color: #b0d3d8;}
@@ -82,23 +105,51 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-player-timeText.airvis-active { color: #ced828;}
 .airvis-player-timeText.airvis-inactive { color: #fbd72c;}
 .airvis-player-timeText.airvis-local { color: #b0d3d8;}
-.airvis-player-time { color: #ffffff; font-size: 30px; font-weight: bold; line-height: 30px; margin: 5px;}
+.airvis-player-time { color: #ffffff; font-size: 30px; font-weight: bold; line-height: 30px; margin: 1px 0 4px;}
+
+
+.airvis-player-timeWindow .airvis-player-time-status { font-size: 12px; line-height: 12px; text-align: right; text-transform: uppercase; color: #bca121; margin: 3px 4px 0;}
+.airvis-active  .airvis-player-time-status { color: #9da51f}
 
 
 /* Radio */
 .airvis-radio-container { cursor: pointer; display: block; padding: 2px 5px;}
-.airvis-radio { display: block; float: left; margin: 3px; width: 12px; height: 12px; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; content: ""; background-color: #505050;}
-.airvis-radio-inner { display: block; margin: 3px; width: 6px; height: 6px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; content: ""; background-color: #f0f0f0;}
+.airvis-radio { display: block; float: left; margin: 3px; width: 12px; height: 12px; content: ""; background-color: #505050;
+
+  -webkit-border-radius: 6px; 
+  -moz-border-radius: 6px; 
+  border-radius: 6px;
+
+}
+.airvis-radio-inner { display: block; margin: 3px; width: 6px; height: 6px; content: ""; background-color: #f0f0f0;
+
+  -webkit-border-radius: 3px; 
+  -moz-border-radius: 3px; 
+  border-radius: 3px;
+
+}
 
 
 /* Select */
 .airvis-selectContainer { float: left; position: relative; width: 150px; margin: 5px;}
 .airvis-select { text-decoration: none;}
-.airvis-value { -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; color: #002a3a; display: block; float: right; font-size: 12px; font-weight: bold; background-color: #ced7d9; padding: 1px 4px; text-align: center; width: 50px; min-height: 20px;}
+.airvis-value { color: #002a3a; display: block; float: right; font-size: 12px; font-weight: bold; background-color: #ced7d9; padding: 1px 4px; text-align: center; width: 50px; min-height: 20px;
+
+  -webkit-border-radius: 2px; 
+  -moz-border-radius: 2px; 
+  border-radius: 2px;
+
+}
 .airvis-label { color: #ced7d9; float: right; font-size: 14px; font-weight: bold; line-height: 22px; margin-right: 5px;}
 .airvis-select:hover .airvis-value { background-color: #ffffff;}
 .airvis-select:hover .airvis-label { color: #ffffff;}
-.airvis-selectBox { -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; background-color: #ffffff; padding: 1px 4px; position: absolute; width: 50px; z-index: 1;}
+.airvis-selectBox { background-color: #ffffff; padding: 1px 4px; position: absolute; width: 50px; z-index: 1;
+
+  -webkit-border-radius: 2px; 
+  -moz-border-radius: 2px; 
+  border-radius: 2px;
+
+}
 .airvis-selectBoxdown { top: 0; right: 0;}
 .airvis-selectBoxup { bottom: 0; right: 0;}
 .airvis-selectBox > a { display: block; text-align: center; font-size: 12px; font-weight: bold; text-decoration: none; color: #002a3a;}
@@ -118,8 +169,12 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-topbar-logo { background: transparent url("../img/logo.png") 0 0 no-repeat; display: block; float: left; height: 24px; margin: 8px 0 0 0; width: 216px;}
 .airvis-topbar-items { display: block; float: left; margin: 0; padding: 0; margin-left: 70px;}
 .airvis-topbar-items li { display: block; float: left; list-style: none outside none;}
-.airvis-topbar-items a { display: block; margin-top: 8px; margin-left: 10px; padding: 0 11px; height: 24px;   text-decoration: none; font-size: 14px; font-weight: bold; line-height: 24px;
- -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; color: #ffffff; background-color: transparent;
+.airvis-topbar-items a { display: block; margin-top: 8px; margin-left: 10px; padding: 0 11px; height: 24px;   text-decoration: none; font-size: 14px; font-weight: bold; line-height: 24px; color: #ffffff; background-color: transparent;
+
+  -webkit-border-radius: 2px; 
+  -moz-border-radius: 2px; 
+  border-radius: 2px;
+
 }
 .airvis-topbar-items a.airvis-checked { background-color: rgba(255,255,255, 0.75); color: #002a3a; }
 .airvis-topbar-items a:hover { background-color: #ffffff; color: #002a3a;	}
