--- a/src/css/checkbox.css
+++ b/src/css/checkbox.css
@@ -6,6 +6,7 @@ span.checkbox {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
+    line-height: 12px;
 }
 
 span.checkbox.checked {
