Issue #3038 styled player

--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -33,7 +33,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-window-close { float: right; outline: 0 none; display: block; width: 24px; height: 24px; background: url(../img/widget_control.png) -48px -24px no-repeat; margin-top: 8px; margin-right: -2px;}
 .airvis-window-close-absolute { position: absolute; outline: 0 none; display: block; top: 8px; right: 8px; width: 24px; height: 24px; background: url(../img/widget_control.png) -48px -24px no-repeat;}
 .airvis-window-close:hover,
-.airvis-window-close-absolute:hover { background-position: -24px 0}
+.airvis-window-close-absolute:hover { background-position: -48px 0}
 .airvis-window-content { background-color: rgba(0,47,64,.75); position: relative; overflow: auto;}
 .airvis-window-content-absolute { bottom: 0; left: 0; position: absolute; right: 0; top: 0px; overflow: visible;}
 .airvis-transparent { background-color: transparent;}
@@ -73,7 +73,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-window td.airvis-checkbox > div { width: 30px;}
 .airvis-window th.airvis-checkbox > div div { padding: 0;}
 .airvis-window th.airvis-checkbox .checkbox, 
-.airvis-window td.airvis-checkbox .checkbox { /*margin-bottom: -5px;*/ margin-top: 4px;}
+.airvis-window td.airvis-checkbox .checkbox { /*margin-bottom: -5px;*/ top: 1px; position: relative;}
 
 .airvis-window table .pilot-number,
 .airvis-window table .pilot-number div.th_wrap { width: 29px; padding: 0;}
@@ -96,29 +96,23 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 
 /* Livetracking controls */
-.airvis-player-controls { padding: 5px; padding-bottom: 0;}
+.airvis-player-controls { padding: 8px 0 0 10px;}
 .airvis-player-controls button { margin: 2px;}
 .airvis-current-time { color: #00aeef; font-size: 12.8px; padding: 0 10px; padding-bottom: 5px;}
-.airvis-slider { background-color: #777777; border: 1px solid #555555; height: 10px; margin: 4px; position: relative;
+.airvis-slider { background-color: rgba(0, 47, 64, 0.75);; border: 1px solid rgba(0, 35, 48, 0.53); height: 8px; margin: 4px; position: relative;
 
-  -webkit-border-radius: 5px; 
-  -moz-border-radius: 5px; 
-  border-radius: 5px;
-
-}
-.airvis-slider-container { padding: 5px; padding-top: 0; overflow: hidden;}
-.airvis-slider-handle { background-color: #a4a4a4; border: 1px solid #444444; display: block; height: 15px; margin-left: -4px; margin-top: -4px; width: 15px; position: absolute; overflow: hidden;
-
-  -webkit-border-radius: 10px; 
-  -moz-border-radius: 10px; 
-  border-radius: 10px;
+  -webkit-border-radius: 3px; 
+  -moz-border-radius: 3px; 
+  border-radius: 3px;
 
 }
-.airvis-slider-range { background-color: #ececec; height: 10px; left: 0; position: absolute;
+.airvis-slider-container { padding: 5px; padding-top: 11px; overflow: hidden;}
+.airvis-slider-handle { display: none;}
+.airvis-slider-range { background-color: #ececec; height: 8px; left: 0; position: absolute;
 
-  -webkit-border-radius: 5px; 
-  -moz-border-radius: 5px; 
-  border-radius: 5px;
+  -webkit-border-radius: 3px; 
+  -moz-border-radius: 3px; 
+  border-radius: 3px;
 
 }
 .airvis-player-controls-titles { background-color: rgba(0,0,0,.4);}
@@ -132,8 +126,8 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 }
 .airvis-player-timeWindow.airvis-active { background-color: #ced828;}
 .airvis-player-timeWindow.airvis-inactive { background-color: #fbd72c;}
-.airvis-player-timeWindow.airvis-local { background-color: #b0d3d8;}
-.airvis-player-timeText { float: left; font-size: 16px; font-weight: bold; line-height: 20px; margin: 10px; margin-left: 0; width: 70px;}
+.airvis-player-timeWindow.airvis-local { background-color: #b0d3d8; padding-top: 15px;}
+.airvis-player-timeText { float: left; font-size: 14px; font-weight: bold; line-height: 20px; margin: 19px 40px 10px 10px; margin-left: 0; width: 70px;}
 .airvis-player-timeText.airvis-active { color: #ced828;}
 .airvis-player-timeText.airvis-inactive { color: #fbd72c;}
 .airvis-player-timeText.airvis-local { color: #b0d3d8;}
@@ -143,6 +137,17 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-player-timeWindow .airvis-player-time-status { font-size: 12px; line-height: 12px; text-align: right; text-transform: uppercase; color: #bca121; margin: 3px 4px 0;}
 .airvis-active  .airvis-player-time-status { color: #9da51f}
 
+.airvis-player-controls-wrapper { background: rgba(0, 47, 64, 0.5); height: 40px; position: relative;}
+.airvis-player-controls-wrapper .airvis-player-controls { float: left;}
+.airvis-player-controls a { display: inline-block; min-width: 20px; padding: 0 5px; font: bold 12px/24px Arial, Helvetica, sans-serif; height: 24px; background: rgba(255,255,255,0.75); text-align: center; color: #002a3a; cursor: pointer;
+
+  -webkit-border-radius: 3px; 
+  -moz-border-radius: 3px; 
+  border-radius: 3px;
+
+}
+.airvis-player-controls a:hover,
+.airvis-player-controls a.player-button-on { background: #ffffff;}
 
 /* Radio */
 .airvis-radio-container { cursor: pointer; display: block; padding: 2px 5px;}
@@ -163,19 +168,20 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 
 /* Select */
-.airvis-selectContainer { float: left; position: relative; width: 150px; margin: 5px;}
+.airvis-player-selects  { float: left; margin-left: 25px; width: 305px; padding-top: 5px;}
+.airvis-selectContainer { float: left; position: relative; width: 140px; margin: 5px;}
 .airvis-select { text-decoration: none;}
-.airvis-value { color: #002a3a; display: block; float: right; font-size: 12px; font-weight: bold; background-color: #ced7d9; padding: 1px 4px; text-align: center; width: 50px; min-height: 20px;
+.airvis-value { color: #002a3a; display: block; float: right; font-size: 12px; font-weight: bold; background-color: rgba(255,255,255, 0.75); padding: 0; text-align: center; width: 50px; min-height: 20px;
 
   -webkit-border-radius: 2px; 
   -moz-border-radius: 2px; 
   border-radius: 2px;
 
 }
-.airvis-label { color: #ced7d9; float: right; font-size: 14px; font-weight: bold; line-height: 22px; margin-right: 5px;}
+.airvis-label { /*color: #ced7d9;*/ color: #ffffff; float: right; font-size: 14px; font-weight: bold; line-height: 18px; margin-right: 5px; padding-bottom: 2px;}
 .airvis-select:hover .airvis-value { background-color: #ffffff;}
 .airvis-select:hover .airvis-label { color: #ffffff;}
-.airvis-selectBox { background-color: #ffffff; padding: 1px 4px; position: absolute; width: 50px; z-index: 1;
+.airvis-selectBox { background-color: #ffffff; padding: 2px 0 3px; position: absolute; width: 50px; z-index: 1;
 
   -webkit-border-radius: 2px; 
   -moz-border-radius: 2px; 
@@ -184,7 +190,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 }
 .airvis-selectBoxdown { top: 0; right: 0;}
 .airvis-selectBoxup { bottom: 0; right: 0;}
-.airvis-selectBox > a { display: block; text-align: center; font-size: 12px; font-weight: bold; text-decoration: none; color: #002a3a;}
+.airvis-selectBox > a { display: block; text-align: center; font-size: 12px; font-weight: bold; text-decoration: none; color: #002a3a; line-height: 15px;}
 .airvis-selectBox > a.active { color: #00aeef;}
 /*
 .airvis-selectBox > a:hover { color: #586971;}
@@ -227,5 +233,6 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 	background: transparent url("/img/ufoFlyMedium.png") 0 0 no-repeat;
 	white-space: nowrap;
 }
+
 
 
