--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -51,7 +51,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 /* table with fixed header in ufosTable widget */
 .airvis-table-with-fixed-header { position: absolute; bottom: 0; left: 0; right: 0; top: 42px;}
-.airvis-table-with-fixed-header-inner { height: 218px; width: 370px; position: relative; overflow: visible !important;}
+.airvis-table-with-fixed-header-inner { height: 208px; width: auto !important; position: relative; overflow: visible !important;}
 .airvis-table-with-fixed-header table { margin: 0; overflow: hidden; position: static; width: 100%; font-size: 12px; color: #ffffff;}
 .arvis-table-head-surrogate { width: 100%; height: 42px; background-color: rgba(0,47,64,.50);}
 .airvis-table-with-fixed-header table th { padding: 0; border: 0; font-size: 12px; line-height: 15px; text-align: left; font-weight: normal;}
@@ -96,12 +96,14 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-window table .pilot-name { vertical-align: top;}
 .airvis-window table .pilot-name .countryicon-sprite { margin-left: 10px;}
 
+.airvis-window table .pilot-nation .countryicon-sprite { margin-right: 10px;}
+
 
 /* Livetracking controls */
 .airvis-player-controls { padding: 8px 0 0 10px;}
 .airvis-player-controls button { margin: 2px;}
 .airvis-current-time { color: #00aeef; font-size: 12.8px; padding: 0 10px; padding-bottom: 5px;}
-.airvis-slider { background-color: rgba(0, 47, 64, 0.75);; border: 1px solid rgba(0, 35, 48, 0.53); height: 8px; margin: 4px; position: relative;
+.airvis-slider { background-color: rgba(0, 47, 64, 0.75); border: 1px solid rgba(0, 35, 48, 0.53); height: 8px; margin: 4px; position: relative;
 
   -webkit-border-radius: 3px; 
   -moz-border-radius: 3px; 
@@ -240,14 +242,22 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .gmap > div > .gmnoprint:nth-child(3n+1),
 .gmap > div > .gmnoprint:last-child { top: 40px !important;}
 
-.jspContainer { position:relative; overflow:hidden;}
-.jspPane { position:relative; height: 400px;}
-.jspVerticalBar { position:absolute; top:0; right:4px}
-.jspDrag { background:#00aeef; width:4px; cursor:pointer; position:relative;
+.jspContainer { position:relative; overflow:hidden; width: auto !important;}
+.jspPane { position:relative; height: 400px; width: auto !important;}
+.jspVerticalBar { position:absolute; top:0; right:6px; background: rgba(0,47,64,.50); border: 1px solid rgba(0, 35, 48, 0.53); 
+
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+
+}
+.jspDrag { background:#ffffff; width:6px; cursor:pointer; position:relative; margin: 0 -2px;
 
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
 
 }
+
+.jspCap, .jspArrow { height: 1px !important;}
 
