--- a/src/css/airvis.css
+++ b/src/css/airvis.css
@@ -50,6 +50,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 
 /* table with fixed header in ufosTable widget */
+/*
 .airvis-table-with-fixed-header { position: absolute; bottom: 0; left: 0; right: 0; top: 42px;}
 .airvis-table-with-fixed-header-inner { height: 208px; width: auto !important; position: relative; overflow: visible !important;}
 .airvis-table-with-fixed-header table { margin: 0; overflow: hidden; position: static; width: 100%; font-size: 12px; color: #ffffff;}
@@ -59,11 +60,11 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-table-with-fixed-header th + th div.th_wrap { border-left: 1px solid rgba(0,47,64,.15)}
 .airvis-table-with-fixed-header th div.th_wrap div { position: absolute; bottom: 5px; left: 0; right: 0; padding: 0}
 .airvis-table-with-fixed-header tr.airvis-hidden-header th > div { height: 0; overflow-y: hidden; position: static; white-space: nowrap;}
-
-
+*/
 /* redefine font sizes in airvis tables */
+/*
 .airvis-window table tbody tr:nth-child(2n+2) { background-color: rgba(0,47,64,.35);}
-.airvis-window table tbody td { /*font-size: 10px;*/ line-height: 20px; padding: 0 10px; text-align: center; vertical-align: top;}
+.airvis-window table tbody td { line-height: 20px; padding: 0 10px; text-align: center; vertical-align: top;}
 .airvis-window table tbody tr:first-child td { padding-top: 8px;}
 .airvis-window table tbody td + td { border-left: 1px solid rgba(0,47,64,.15)}
 
@@ -75,7 +76,7 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-window td.airvis-checkbox > div { width: 30px;}
 .airvis-window th.airvis-checkbox > div div { padding: 0;}
 .airvis-window th.airvis-checkbox .checkbox, 
-.airvis-window td.airvis-checkbox .checkbox { /*margin-bottom: -5px;*/ top: 1px; position: relative;}
+.airvis-window td.airvis-checkbox .checkbox { top: 1px; position: relative;}
 
 .airvis-window table .pilot-number,
 .airvis-window table .pilot-number div.th_wrap { width: 29px; padding: 0;}
@@ -97,6 +98,59 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 .airvis-window table .pilot-name .countryicon-sprite { margin-left: 10px;}
 
 .airvis-window table .pilot-nation .countryicon-sprite { margin-right: 10px;}
+*/
+
+.airvis-tbl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.airvis-tbl table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 0;
+  padding: 0;  
+  width: 100%;
+}
+.airvis-tbl td {
+  margin: 0;
+  padding: 2px 5px;
+  text-align: center;
+}
+
+.airvis-tbl td.airvis-checkbox {
+  width: 12px;
+}
+.airvis-tbl td.airivs-pilot-number {
+  width: 35px;
+  text-align: right;
+}
+.airvis-tbl td.airvis-alt {
+  min-width: 40px;
+}
+.airvis-tbl td.airvis-gspd {
+  min-width: 40px;
+}
+.airvis-tbl td.airvis-vspd {
+  min-width: 40px;
+}
+.airvis-tbl td.airvis-dist-to-goal {
+  min-width: 55px;
+}
+.airvis-table-body {
+  position: absolute;
+  overflow: hidden;
+  top: 40px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+
+
+
 
 
 /* Livetracking controls */
@@ -261,3 +315,14 @@ document,body { height: 100%; margin: 0; padding: 0; font-family: Arial, Helveti
 
 .jspCap, .jspArrow { height: 1px !important;}
 
+
+
+
+.airvis-scrollbar .overview { position: absolute; left: 0; top: 0; }
+.airvis-scrollbar .thumb .end,.airvis-scrollbar .thumb { background-color: #003D5D; }
+.airvis-scrollbar .scrollbar { position: absolute; width: 15px; right: 0; bottom: 0; }
+.airvis-scrollbar .track { background-color: #D8EEFD; height: 100%; width:13px; position: relative; padding: 0 1px; }
+.airvis-scrollbar .thumb { height: 20px; width: 13px; cursor: pointer; overflow: hidden; position: absolute; top: 0; }
+.airvis-scrollbar .thumb .end { overflow: hidden; height: 5px; width: 13px; }
+.airvis-scrollbar .disable{ display: none; }
+.noSelect { user-select: none; -o-user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; }
